<resources>

    <string name="ms_prev">Atraz</string>
    <string name="ms_next">Proximo</string>
    <string name="ms_end">Finalizar</string>
    <string name="ms_continue">Proximo</string>
    <string name="ms_optional">Opcional</string>
    <string name="ms_text_step">Passo $current de $total</string>


    <string name="quitanda">Quitanda</string>>


    <string name="clients">Clientes</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="cliente">Cliente</string>
    <string name="name">Nome</string>
    <string name="surname">Apelido</string>
    <string name="clientResidence">Morada</string>
    <string name="clienteContact">Contacto</string>
    <string name="produto">Produto</string>
    <string name="preco">Preço</string>
    <string name="montante">Montante</string>
    <string name="produtoSelected">Produto Selecionado</string>
    <string name="quantidade">Quant</string>
    <string name="unidade">Unit</string>

    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="dez_trinta">10.30</string>

    <string name="payNow">Pagar Agora</string>
    <string name="datePaymente">Data de pagamento</string>
    <string name="dateEntrega">Data de entraga</string>
    <string name="regCredito">Registar Credito</string>
    <string name="venda">Venda</string>
    <string name="cansel">Cansela</string>
    <string name="ok">OK</string>
    <string name="title_activity_test_problema">TestProblema</string>
    <string name="clientSelected">Selecionado</string>


    <!-- MESSAGE PASSING -->
    <string name="msg_not_found_data_for_calc">Não encotrou dados sufuiciente para calcular os montente a pagar</string>
    >
    <string name="msg_missing_product_measure">O produto e a sua correspondent medina não foi previemnte selecionada</string>
    >
    <string name="msg_unipicified_quantity">A quantidade do produto ainda não foi expecificada</string>
    >
    <string name="msg_new_operaction">Nova operação registrada com sucesso</string>
    <string name="contact">Contacto</string>
    <string name="residence">Residencia</string>
    <string name="client_name">Nome do cliente</string>
    <string name="sell">Venda</string>
    <string name="qt">Qt.</string>
    <string name="quantity">Quantidade</string>
    <string name="operationDay">Operações do dia</string>
    <string name="operations">Operações</string>
    <string name="credits">Creditos</string>
    <string name="sells">Vendas</string>
    <string name="sellCredits">Vendas e creditos</string>
    <string name="settings">Difinições</string>
    <string name="sync">Sincronização</string>
    <string name="schop">Quitanda</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="_0_0">0,0</string>
    <string name="title_activity_add_mobs">AddMobs</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">100</string>
    <string name="title_activity_imervision">Hello World Immersion</string>
    <string name="add_in_car">Adicionar ao carinho</string>
    <string name="payment">Pagamento</string>
    <string name="selected">Selecionados</string>
    <string name="pay_now">Pagamento Agora</string>
    <string name="send_now">Novo pagamento</string>
    <string name="date_entrega">Data de entrega</string>
    <string name="date_payment">Date de pagamento</string>
    <string name="new_client">Novo cliente</string>
    <string name="save">Salvar</string>
    <string name="title_activity_ola_float">Ola Float</string>
    <string name="add">Adicionar</string>
    <string name="remove">Remover</string>
    <string name="product">Productos</string>
    <string name="measure">Measure</string>
    <string name="values">Values</string>

</resources>
