<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/lib_border_line_small"
    android:paddingRight="@dimen/lib_border_line_small"
    android:paddingTop="@dimen/paddingLayoutSmall"
    android:background="@drawable/border_text_box_cizento"
    >


    <RelativeLayout
        android:id="@+id/panelContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true">


        <TextView
            android:id="@+id/tvClienteName"
            style="@style/textLineLong"
            android:textStyle="bold"
            android:text="@string/client_name"
            android:textColor="@color/colorPrimary"
            android:paddingTop="0dp"
            android:layout_margin="0dp"
            android:paddingBottom="@dimen/paddingLayoutSmall"
            android:layout_width="match_parent"
            android:background="@drawable/lib_border_line_cizento_fusc"
            />

        <ImageButton
            android:id="@+id/panelBobo"
            android:layout_width="@dimen/margeGrandNormal"
            android:layout_below="@+id/tvClienteName"
            android:layout_height="@dimen/margeGrandNormal"
            android:src="@drawable/img_client_preson"
            android:scaleType="centerCrop"
            android:padding="@dimen/paddingLong"
            android:background="@android:color/transparent"
            />

        <TextView
            android:id="@+id/tvClientContact"
            style="@style/textLineNormal"
            android:layout_marginTop="@dimen/margemNormal"
            android:layout_marginRight="@dimen/margeGrandTiny"
            android:layout_below="@+id/tvClienteName"
            android:layout_alignParentRight="true"
            android:gravity="center|left"
            android:layout_toRightOf="@+id/panelBobo"
            android:hint="@string/contact"
            />


        <TextView
            android:id="@+id/tvClinetMorada"
            style="@style/textLineNormal"
            android:layout_marginTop="@dimen/margemNormal"
            android:layout_marginRight="@dimen/margeGrandTiny"
            android:layout_below="@+id/tvClientContact"
            android:layout_alignParentRight="true"
            android:gravity="center|left"
            android:layout_toRightOf="@+id/panelBobo"
            android:hint="@string/clientResidence"

            />

    </RelativeLayout>

</RelativeLayout>
